feat: create database, create collection, insert and update working on fs